Story #11066 : Do not reload referent offer for every single read